--- a/client/css/main.styl
+++ b/client/css/main.styl
@@ -1,13 +1,21 @@
 // out: main.css, sourcemap: true, compress: false
-@import "reset.styl";
 *
   position relative
 
-.container-fluid
-  padding-top 65px
+.loading-symbol
+  -ms-animation spin 1s linear infinite
+  -moz-animation spin 1s linear infinite
+  -webkit-animation spin 1s linear infinite
+  animation spin 1s linear infinite
 
-.reps-list
-  padding-top 50px
-
-button, .input-group
-  margin-top 20px
+@keyframes spin
+  from
+    -ms-transform rotate(0deg)
+    -moz-transform rotate(0deg)
+    -webkit-transform rotate(0deg)
+    transform rotate(0deg)
+  to
+    -ms-transform rotate(360deg)
+    -moz-transform rotate(360deg)
+    -webkit-transform rotate(360deg)
+    transform rotate(360deg)
